# EasyChat

./: CMakeLists.txt  README.md
Debug/USERINFO/: B  C  D
include/: CommenHeaders.h  Constants.h  FileUtils.h  MsgInterpreter.h  ScopedThread.h  Server.h  client.h
src/: Client.cpp  EasyChat.cpp  FileUtils.cpp  MsgInterpreter.cpp  Server.cpp  stdafx.cpp
